<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout style="@style/OverlayContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/unknownErrorContactSupportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/unknownErrorIcon"
            style="@style/IconStyle"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_attention_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/unknownErrorTitle"
            style="@style/DialogTitle"
            android:layout_marginTop="@dimen/reg_16dp"
            android:text="@string/failed_network_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unknownErrorIcon" />

        <TextView
            android:id="@+id/unknownErrorDescription"
            style="@style/DialogDescription"
            android:layout_marginTop="@dimen/reg_16dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:text="@string/failed_network_alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unknownErrorTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/unknownErrorContactSupportButton"
        style="@style/WarningActionButton"
        android:text="@string/contact_support"
        app:layout_constraintBottom_toTopOf="@id/unknownErrorCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/unknownErrorCancelButton"
        style="@style/DialogSecondaryButton"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
