...
    <string name="ok">OK</string>
    <string name="view_log">View Debug Log</string>
    <string name="send_log">Send Debug Log</string>
    <string name="send_charon_log">Send IkEv2 log</string>
    <string name="sent_thanks">Sent thanks !</string>
    <string name="sending_log">Sending log…</string>
    <string name="export_log">Export Log</string>
    <string name="no_favourites">No favourites</string>
    <string name="no_custom_configs">Custom configs allow you to connect to any OpenVPN or Wireguard server. Just add a valid config file and it will appear in this tab.</string>
    <string name="add_profile">Add VPN Profile</string>
    <string name="add_static_ip">Add Static IP</string>
    <string name="check_status">Check status</string>
    <string name="check_location_status">Check Location Status</string>
...
